# diemPy

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: _config.yml  _toc.yml  advanced-polarizing.md  api.md  conf.py  core-classes.md  core-concepts.md  installation.md  intro.md  key-features.md  quickstart.md  requirements.txt  vcf-conversion.md  workflow_dev_test_from_bed_dev.ipynb  workflow_dev_test_from_utils_dev.ipynb
example_workflow/: tutorial.ipynb
example_workflow/user_files/: chrom_ploidy.tsv  masked_individuals.txt  masked_regions.bed
example_workflowV1/data/: example_dataset.vcf.gz.diem_exclude.bed  example_dataset.vcf.gz.diem_input.bed  example_dataset.vcf.gz.diem_meta.bed  example_dataset.vcf.gz.diem_meta_corrected.bed
example_workflowV1/output/: diem_output.bed  example_polarized.diemtype
example_workflowV1/user_files/: masked_regions.bed
notebooks/: Poster_content_iphiclides-Copy1.ipynb  SmoothingParallelDev.ipynb  derek_input_process_and_output.ipynb  derek_main_test.ipynb  main_test.ipynb  workflow_dev.ipynb
src/diem/: __init__.py  contigs.py  diemtype.py  io.py  plots.py  polarize.py  smooth.py  tests.py  utils.py  vcf2diem.py  vcf2diembeds.py
src/diem.egg-info/: PKG-INFO  SOURCES.txt
src/diempy/: __init__.py  diem2fasta.py  diemtype.py  io.py  plots.py  smooth.py  utils.py  vcf2diembeds.py
