[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "diem"
version = "0.0.1"
authors = [
  { name="Derek Setter", email="derek.setter@gmail.com" },
]
description = "Polarize genomes using diem"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0", 
    "numba>=0.56.0",
    "matplotlib>=3.4.0",
    "docopt>=0.6.2",
    "scikit-allel>=1.3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]

[project.scripts]
vcf2diem = "diem.vcf2diembeds:main"